server-java-modern: Java 11+ idiom modernization (toList, isBlank, readString)
Three mechanical Java 8 -> Java 11+ idiom upgrades. All callers checked
for compatibility with the slightly-different semantics:

Stream.collect(Collectors.toList()) -> Stream.toList() (Java 16+, 5 sites):
  Returns an immutable list. Verified all 5 callers iterate-only:
  PatchApplier (for-each), NamedParameterQuery (String.join input),
  RSCPacketFilter (.contains check), Functions (for-each), Server
  (passed to outerList.addAll).

.trim().isEmpty() -> .isBlank() (Java 11, 7 sites):
  Functionally equivalent for ASCII whitespace; .isBlank() recognizes
  more Unicode whitespace as blank. Used for SSL path checks and string
  validation -- no semantic change.

new String(Files.readAllBytes(path)) -> Files.readString(path) (Java 11, 9 sites):
  Files.readString uses UTF-8 explicitly; the prior code used the JVM
  default charset (which is UTF-8 on macOS/Linux/Java 18+). Game data
  JSON files verified valid UTF-8.

Verified: ant compile_core + compile_plugins clean, ./smoke_test.sh
4/4 pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>